# rmcp-demo

./: .env.example  .gitignore  Cargo.toml  Justfile  README.md  pyproject.toml
rmcp-trace-macro/: Cargo.toml
rmcp-trace-macro/src/: lib.rs
scripts/: call_weather.py
src/: main.rs  trace_store.rs  trace_utils.rs  tracing_middleware.rs  tracing_setup.rs  weather_service.rs  weather_tools.rs
weather_assistant/: cli.py  client.py  server.py
weather_assistant/config/: tracing.py
